# mate-desktop

./: .build.yml  .travis.yml  AUTHORS  CNAME  ChangeLog  HACKING  MAINTAINERS  Makefile  Makefile.am  Makefile.in  NEWS  README  abi-check  acinclude.m4  aclocal.m4  autogen.sh  config.h  config.h.in  config.meson.h  config.status  configure  configure.ac  configure.in  index.html  libtool  makepot  mate-desktop.pot  mate-version.xml  mate-version.xml.in  mate-version.xml.in.in  meson.build  meson_options.txt  xmldocs.make
.github/: FUNDING.yml  dependabot.yml  issue_template.md
.tx/: config
2021-02-02-154245-5833-1@7a9f443d569f_bad-function-cast/: index.html  (+30 more)
icons/: Makefile  Makefile.am  Makefile.in  meson.build
libmate-desktop/: Makefile  Makefile.am  Makefile.in  MateDesktop-2.0.gir  MateDesktop-2.0.typelib  display-name.c  display-name.lo  edid-parse.c  edid-parse.lo  edid.h  libmate-desktop-2.la  mate-aboutdialog.c  mate-aboutdialog.h  mate-aboutdialog.lo  mate-bg-crossfade.c  mate-bg-crossfade.h  mate-bg-crossfade.lo  mate-bg.c  mate-bg.h  mate-bg.lo  mate-colorbutton.c  mate-colorbutton.h  mate-colorbutton.lo  mate-colorsel.c  mate-colorsel.h  mate-colorsel.lo  mate-colorseldialog.c  mate-colorseldialog.h  mate-colorseldialog.lo  mate-dconf.c  mate-dconf.h  mate-dconf.lo  mate-desktop-2.0-uninstalled.pc  mate-desktop-2.0-uninstalled.pc.in  mate-desktop-2.0.pc  mate-desktop-2.0.pc.in  mate-desktop-3.0.pc.in  mate-desktop-item.c  mate-desktop-item.h  mate-desktop-item.lo  (+48 more)
libmate-desktop/.deps/: display-name.Plo  edid-parse.Plo  mate-aboutdialog.Plo  mate-bg-crossfade.Plo  mate-bg.Plo  mate-colorbutton.Plo  mate-colorsel.Plo  mate-colorseldialog.Plo  mate-dconf.Plo  mate-desktop-item.Plo  mate-desktop-thumbnail.Plo  mate-desktop-utils.Plo  mate-gsettings.Plo  mate-rr-config.Plo  mate-rr-labeler.Plo  mate-rr-output-info.Plo  mate-rr.Plo  mate-thumbnail-pixbuf-utils.Plo  test-ditem.Po  test.Po
libmate-desktop/.libs/: libmate-desktop-2.exp  libmate-desktop-2.la  libmate-desktop-2.lai  libmate-desktop-2.so.17.1.4  libmate-desktop-2.ver  test  test-ditem
libmate-desktop/libmate/: Makefile.am  mate-desktop-item.h  mate-desktop-utils.h
libmate-desktop/libmateui/: Makefile.am  mate-bg-crossfade.h  mate-bg.h  mate-desktop-thumbnail.h  mate-rr-config.h  mate-rr-labeler.h  mate-rr.h
mate-about/: Makefile  Makefile.am  Makefile.in  mate-about  mate-about.c  mate-about.desktop  mate-about.desktop.in  mate-about.desktop.in.in  mate-about.h  mate-about.h.in  mate-version.xml.in  meson.build
mate-about/.deps/: mate_about-mate-about.Po
mate-about/.libs/: mate-about
po/: .intltool-merge-cache  LINGUAS  Makefile  Makefile.am  Makefile.in  Makevars  POTFILES  POTFILES.in  POTFILES.skip  af.gmo  af.po  am.gmo  am.po  an.gmo  an.po  ar.gmo  ar.po  ar_AE.po  as.gmo  as.po  ast.gmo  ast.po  az.gmo  az.po  be.gmo  be.po  be@latin.po  bg.gmo  bg.po  bn.gmo  bn.po  bn_IN.gmo  bn_IN.po  bqi.po  br.gmo  br.po  bs.gmo  bs.po  ca.gmo  ca.po  (+264 more)
schemas/: Makefile  Makefile.am  Makefile.in  mate-desktop.convert  meson.build  org.mate.accessibility-keyboard.gschema.xml  org.mate.accessibility-keyboard.gschema.xml.in  org.mate.accessibility-keyboard.gschema.xml.in.in  org.mate.accessibility-startup.gschema.xml  org.mate.accessibility-startup.gschema.xml.in  org.mate.accessibility-startup.gschema.xml.in.in  org.mate.applications-at-mobility.gschema.xml  org.mate.applications-at-mobility.gschema.xml.in  org.mate.applications-at-mobility.gschema.xml.in.in  org.mate.applications-at-visual.gschema.xml  org.mate.applications-at-visual.gschema.xml.in  org.mate.applications-at-visual.gschema.xml.in.in  org.mate.applications-browser.gschema.xml  org.mate.applications-browser.gschema.xml.in  org.mate.applications-browser.gschema.xml.in.in  org.mate.applications-calculator.gschema.xml  org.mate.applications-calculator.gschema.xml.in  org.mate.applications-colors.gschema.xml  org.mate.applications-messenger.gschema.xml  org.mate.applications-office.gschema.xml  org.mate.applications-office.gschema.xml.in  org.mate.applications-office.gschema.xml.in.in  org.mate.applications-terminal.gschema.xml  org.mate.applications-terminal.gschema.xml.in  org.mate.applications-terminal.gschema.xml.in.in  org.mate.background.gschema.xml  org.mate.background.gschema.xml.in  org.mate.background.gschema.xml.in.in  org.mate.debug.gschema.xml  org.mate.debug.gschema.xml.in.in  org.mate.file-views.gschema.xml  org.mate.file-views.gschema.xml.in  org.mate.file-views.gschema.xml.in.in  org.mate.interface.gschema.xml  org.mate.interface.gschema.xml.in  (+22 more)
tools/: Makefile  Makefile.am  Makefile.in  mate-color-select  mate-color-select.c  mate-color-select.desktop  mate-color-select.desktop.in  mate-color-select.desktop.in.in  mate-conf-import  mate-conf-import.desktop.in.in  mate-gsettings-toggle  meson.build  mpaste
tools/.deps/: mate_color_select-mate-color-select.Po
tools/.libs/: mate-color-select
user-guide/: ChangeLog  Makefile.am  mate-user-guide.desktop.in.in  mate-user-guide.omf.in
user-guide/C/: .cvsignore  ChangeLog  glossary.xml  gosbasic.xml  goscaja.xml  goscustdesk.xml  goseditmainmenu.xml  gosfeedback.xml  gosoverview.xml  gospanel.xml  gosstartsession.xml  gostools.xml  index.docbook  legal.xml
user-guide/C/figures/: sample_anno_panel.xcf  titlebar_anno_window.xcf  typical_anno_desktop.xcf
user-guide/ar/: ar.po
user-guide/bg/: ChangeLog  bg.po
user-guide/cs/: cs.po
user-guide/de/: de.po
user-guide/el/: el.po
user-guide/el/figures/: caja_iconview_anno_window.xcf
user-guide/es/: es.po
user-guide/eu/: eu.po
user-guide/fi/: fi.po
user-guide/fr/: fr.po
user-guide/gl/: gl.po
user-guide/hu/: ChangeLog  hu.po
user-guide/id/: id.po
user-guide/it/: it.po
user-guide/ja/: ja.po
user-guide/ko/: ko.po
user-guide/nl/: nl.po
user-guide/oc/: oc.po
user-guide/pa/: pa.po
user-guide/pt/: pt.po
user-guide/pt_BR/: pt_BR.po
user-guide/ro/: ChangeLog
user-guide/ru/: ru.po
user-guide/sv/: sv.po
user-guide/th/: th.po
user-guide/uk/: uk.po
user-guide/zh_CN/: zh_CN.po
(+765 files in other folders)
